tests/fw_rules_tests/policies/calico-testcase13-open-default-TCP.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-networkpolicy-open-default-namespace
  namespace: default
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
    protocol: 136 #UDPLite
    source:
      selector: all()
  - action: Allow
    source:
      selector: all()

  egress:
  - action: Deny
    protocol: 136 #UDPLite
    destination:
      selector: all()
  - action: Allow
    destination:
      selector: all()
